0.1-alpha2/_sources/gene/AGAP002825.rst.txt
:orphan:



AGAP002825
==========

Location: **2R:28,007,274-28,014,861**

Name: **PPO1**

Description: **Prophenoloxidase 1**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP002825>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:28007274-28014861#genomebrowser>`_



Adjacent signals
----------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/AOM/2/1/index`, "2R:28,060,001-28,100,000", 526 (403 | 123)
    



Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP002825';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


