0.1-alpha3/_sources/gene/AGAP002825.rst.txt
:orphan:



AGAP002825
==========

Location: **2R:28,007,274-28,014,861**

Name: **PPO1**

Description: **Prophenoloxidase 1**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP002825>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:28007274-28014861#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/UGS.BFS/2/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:27,980,000-28,280,000
      - 753
      - 99.9%
      - nan
    * - :doc:`../signal/IHS/AOM/2/1/index`
      - IHS
      - Angola *An. coluzzii*
      - 2R:27,980,000-28,040,000
      - 324
      - 100.0%
      - nan
    * - :doc:`../signal/XPEHH/AOM.BFM/2/3/index`
      - XPEHH
      - Angola *An. coluzzii*
      - 2R:28,000,000-28,060,000
      - 295
      - 99.4%
      - nan
    * - :doc:`../signal/XPEHH/AOM.GWA/2/5/index`
      - XPEHH
      - Angola *An. coluzzii*
      - 2R:27,980,000-28,040,000
      - 96
      - 95.2%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/AOM/2/2/index`
      - H12
      - Angola *An. coluzzii*
      - 2R:28,040,000-28,080,000
      - 478
      - 100.0%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP002825';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


